...
                android:layout_height="match_parent" />

        </com.google.android.exoplayer2.ui.AspectRatioFrameLayout>

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/step_detail"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textIsSelectable="true"
            tools:context=".fragments.StepDetailFragment"
...
